--- a/package.json
+++ b/package.json
@@ -1,41 +1,102 @@
 {
-  
+  
   "name": "sparsh-portfolio",
+  
   "version": "0.1.0",
+  
   "private": true,
+  
   "scripts": {
-    "dev": "next dev",
-    "build": "next build",
-    "start": "next start",
-    "lint": "next lint"
+  
+    
+  "dev": "next dev",
+  
+    
+  "build": "next build",
+  
+    
+  "start": "next start",
+  
+    
+  "lint": "next lint"
+  
   },
+  
   "dependencies": {
-    "@react-three/drei": "^9.92.7",
-    "@react-three/fiber": "^8.15.12",
-    "@supabase/supabase-js": "^2.39.8",
-    "framer-motion": "^10.16.16",
-    "lucide-react": "^0.344.0",
-    "next": "^14.2.30",
-    "react": "^18.3.1",
-    "react-dom": "^18.3.1",
-    "three": "^0.160.0",
-    "zod": "^3.22.4"
+  
+    
+  "@react-three/drei": "^9.92.7",
+  
+    
+  "@react-three/fiber": "^8.15.12",
+  
+    
+  "@supabase/supabase-js": "^2.39.8",
+  
+    
+  "framer-motion": "^10.16.16",
+  
+    
+  "lucide-react": "^0.344.0",
+  
+    
+  "mongodb": "^6.17.0",
+  
+    
+  "next": "^14.2.30",
+  
+    
+  "react": "^18.3.1",
+  
+    
+  "react-dom": "^18.3.1",
+  
+    
+  "three": "^0.160.0",
+  
+    
+  "zod": "^3.22.4"
+  
   },
+  
   "devDependencies": {
-    "@types/node": "^20.11.0",
-    "@types/react": "^18.3.5",
-    "@types/react-dom": "^18.3.0",
-    "@types/three": "^0.160.0",
-    "autoprefixer": "^10.4.18",
-    "eslint": "^8.56.0",
-    "eslint-config-next": "14.1.0",
-    "postcss": "^8.4.35",
-    "tailwindcss": "^3.4.1",
-    "typescript": "^5.5.3"
-  }, 
-  "engines" :{
-      "node": "18.x"
+  
+    
+  "@types/node": "^20.11.0",
+  
+    
+  "@types/react": "^18.3.5",
+  
+    
+  "@types/react-dom": "^18.3.0",
+  
+    
+  "@types/three": "^0.160.0",
+  
+    
+  "autoprefixer": "^10.4.18",
+  
+    
+  "eslint": "^8.56.0",
+  
+    
+  "eslint-config-next": "14.1.0",
+  
+    
+  "postcss": "^8.4.35",
+  
+    
+  "tailwindcss": "^3.4.1",
+  
+    
+  "typescript": "^5.5.3"
+  
+  },
+  
+  "engines": {
+  
+    
+  "node": "18.x"
+  
   }
-  
-  
 }
